learn how to make an eWindowType_invisible widget. bug 207742 r=brendan,bryner