widget/src/gtk/nsWidget.cpp
@@ -1226,7 +1226,8 @@ nsresult nsWidget::CreateWidget(nsIWidget *aParent,
 
   nsIWidget *baseParent = aInitData &&
     (aInitData->mWindowType == eWindowType_dialog ||
-     aInitData->mWindowType == eWindowType_toplevel) ?
+     aInitData->mWindowType == eWindowType_toplevel ||
+     aInitData->mWindowType == eWindowType_invisible) ?
     nsnull : aParent;
 
   BaseCreate(baseParent, aRect, aHandleEventFunction, aContext,
